@@ -176,6 +176,18 @@ int sstrappend(char str[], size_t *len, size_t size, const char suffix[]);
 /* Pads buffer pointed to by str to be at least of width "width + 1". */
 void stralign(char str[], size_t width, char pad, int left_align);
 
+/* Ensures that str is of width (in UTF-8 characters) less than or equal to
+ * max_width and is left aligned putting ellipsis on the right side if needed.
+ * Changes the string in place.  Returns the str unless max_width is zero in
+ * which case NULL is returned. */
+char * left_ellipsis(char str[], size_t max_width);
+
+/* Ensures that str is of width (in UTF-8 characters) less than or equal to
+ * max_width and is right aligned putting ellipsis on the left side if needed.
+ * Changes the string in place.  Returns the str unless max_width is zero in
+ * which case NULL is returned. */
+char * right_ellipsis(char str[], size_t max_width);
+
 /* "Breaks" single line it two parts (before and after "%=" separator), and
  * re-formats it filling specified width by putting "left part", padded centre
  * followed by "right part".  Frees the str.  Returns re-formatted string in
